# som1vn

./: CMakeLists.txt  README.md  ReadmeSomWS  package.xml
nav1/: tiago_voice_nav1.launch
nodes/: som_recognizer.py  somtester1.py  voice_cmd_vel.py
nodes/maps/: labels_cmd_6words.npy  weights_cmd_6words.npy
